[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-stock-images-mcp"
version = "0.1.0"
description = "MCP server for getting free stock images"
authors = [{name = "Xavier Collantes"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
free-stock-images-mcp = "src.server:main"